<resources>
    <string name="app_name">Phuc Ngo</string>
    <string name="email">Email</string>
    <string name="user_name">Fullname</string>
    <string name="birth_day">Birth day</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="password_again">Password confirm</string>
    <string name="hint_input_phone">Your email</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_input_password">Password</string>
    <string name="txt_login">Login</string>
    <string name="register">Register</string>
    <string name="new_product">Add product</string>
    <string name="list_products">List product</string>
    <string name="order_management">Order management</string>
    <string name="register_now">Register now</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="you_are_have_not_account">Do not have an account ? </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_product">List</string>
    <string name="add_product">Add Product</string>
    <string name="account">Account</string>
    <string name="store">Store</string>
    <string name="cart">Cart</string>
    <string name="input_card">Input Card</string>
    <string name="logout">Log out</string>
    <string name="hello">Hello , Phuc Ngo Store!</string>
    <string name="message_call">24/7 call center always accompanies you in the situation of Covid-19</string>
    <string name="call_now">Call now</string>
    <string name="hotline">Hotline:</string>
    <string name="phone_number">8888888</string>
    <string name="hint_name_product">Name Product</string>
    <string name="hint_cost_product">Product price</string>
    <string name="hint_description_product">Detail product</string>
    <string name="accept">Confirm</string>
    <string name="add_store">Add new store</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="view_cart">Cart</string>
    <string name="payment">Payment</string>
    <string name="payment_function">Payment methods</string>
    <string name="handle_product">Order processing</string>
    <string name="cash">Online</string>
    <string name="payment_on_delivery">On delivery</string>
    <string name="transfer">Debit card payments</string>
    <string name="payment_message">Success</string>
    <string name="accept_payment_message">Order confirmation successful</string>
    <string name="cancel_payment_message">Canceled order successfully</string>
    <string name="order_manager">Order Management</string>
    <string name="vegetable">Vegetable</string>
    <string name="packaged_food">Packaged food</string>
    <string name="fresh_meat">Fresh meat</string>
    <string name="ha">Milk</string>
    <string name="dokho">Rice , Flour , Dry food</string>
    <string name="donglanh">Frozen foods</string>
    <string name="traicay">Fruit</string>
    <string name="nuocngot">Soft drinks</string>
    <string name="type_product">Commodities: </string>
    <string name="different">Cooking oil, spices</string>
    <string name="accept_payment">Payment and shipping</string>
    <string name="cancel_payment">Cancel the order</string>
    <string name="delete_message">Do you want delete this product?</string>
    <string name="message">Notify</string>
    <string name="picture_visible">Add an image for the product</string>
    <string name="picture_invisible">This product currently has no image</string>
    <string name="product_detail">Product Detail</string>
</resources>