<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/header1"
        android:title="@string/vegetable" />
    <item
        android:id="@+id/header2"
        android:title="@string/packaged_food" />
    <item
        android:id="@+id/header3"
        android:title="@string/fresh_meat" />

    <item
        android:id="@+id/header4"
        android:title="@string/different" />
    <item
        android:id="@+id/header5"
        android:title="@string/ha" />
    <item
        android:id="@+id/header6"
        android:icon="@drawable/ic_different"
        android:title="@string/dokho" />
    <item
        android:id="@+id/header7"
        android:title="@string/donglanh" />
    <item
        android:id="@+id/header8"
        android:title="@string/traicay" />
    <item
        android:id="@+id/header9"
        android:title="@string/nuocngot" />

</menu>