<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:background="?android:attr/actionBarItemBackground"
            android:contentDescription="@null"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_header"
            style="@style/TextPrimaryBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_product"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/view_product"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        app:cardCornerRadius="@dimen/_2sdp"
        app:cardElevation="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@id/layout_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <TextView
                android:id="@+id/txt_image_description"
                style="@style/TextPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/picture_visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_upload"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btn_updateImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/type_product"
        style="@style/TextPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/type_product"
        android:textAppearance="@style/InputForm"
        android:textColor="#3F51B5"
        app:layout_constraintTop_toBottomOf="@id/view_product"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/edt_name_product"
        style="@style/EditTextPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:autofillHints="true"
        android:hint="@string/hint_name_product"
        android:inputType="textCapSentences|text"
        android:lineSpacingExtra="4dp"
        android:singleLine="true"
        android:textColor="@color/azure"
        app:layout_constraintTop_toBottomOf="@id/type_product"
        tools:layout_editor_absoluteX="12dp" />

    <TextView
        android:id="@+id/type_product2"
        style="@style/TextPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/type_product"
        android:textAppearance="@style/EditTextPrimary"
        android:textColor="#3F51B5"
        app:layout_constraintTop_toBottomOf="@id/view_product"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/edt_cost_product"
        style="@style/EditTextPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:autofillHints="true"
        android:hint="@string/hint_cost_product"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textColor="@drawable/color_edit_text_selector"
        app:layout_constraintTop_toBottomOf="@id/edt_name_product"
        tools:layout_editor_absoluteX="24dp" />


    <EditText
        android:id="@+id/edt_description_product"
        style="@style/EditTextPrimary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:autofillHints="true"
        android:duplicateParentState="false"
        android:gravity="top"
        android:hint="@string/hint_description_product"
        android:inputType="textMultiLine|textCapSentences"
        android:textColor="@drawable/color_edit_text_selector"
        app:layout_constraintTop_toBottomOf="@id/edt_cost_product"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/view_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/edt_description_product">

        <TextView
            android:id="@+id/txt_delete"
            style="@style/TextSubmitPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_remove"
            android:gravity="center_horizontal"
            android:text="Delete"
            android:textColor="@color/white"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_create"
            style="@style/TextSubmitPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:gravity="center_horizontal"
            android:text="@string/accept"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>